apps/argo-workflows/overlays/prod/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-workflows-prod-ingressroute
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argo-workflows.home.nerdylyonsden.io`)
      kind: Rule
      services:
        - name: argo-workflows-prod-server
          port: 2746
  tls:
    secretName: prod-apps-certificate-secret
